objects/LLC_BI__Pricing_Option__c.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__Number_of_Odd_Days__c</fullName>
        <description>The system automatically populates this optional number field to determine the number of odd days between closing and first payment. By default, it is blank.</description>
        <inlineHelpText>The number of days accumulating odd interest between closing and first payment.</inlineHelpText>
        <label>Number of Odd Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Odd_Days_Amount_Per_Diem__c</fullName>
        <description>The system automatically populates this optional currency field to determine the daily cost of the odd days interest the loan accrues. By default, it is blank.</description>
        <inlineHelpText>The daily cost of odd days interest on a loan.</inlineHelpText>
        <label>Odd Days Amount Per Diem</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Odd_Days_Amount__c</fullName>
        <description>The system automatically populates this optional currency field to determine the amount of odd days interest the loan accrues. By default, it is blank.</description>
        <inlineHelpText>The amount of odd days interest accrued for the loan.</inlineHelpText>
        <label>Odd Days Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related Opportunity</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Pricing_Options</relationshipLabel>
        <relationshipName>Pricing_Options</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Other_Income__c</fullName>
        <description>The system populates the scenario financial statement Other Income. By default, it is blank.</description>
        <label>Other Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Payment_Schedule__c</fullName>
        <description>This field represents the frequency of payments on the loan.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Payment Schedule</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Payment_Type__c</fullName>
        <description>This field indicates the payment type of the loan</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Payment Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Pre_Tax_Income__c</fullName>
        <description>The system populates the scenario financial statement Pre-Tax Income. By default, it is blank.</description>
        <label>Pre-Tax Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Prepayment_Option__c</fullName>
        <description>This field indicates if there is a prepayment option</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Prepayment Option</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Pricing_Basis__c</fullName>
        <description>This field represents whether the underlying base rate for a loan is fixed or variable.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Pricing Basis</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Principal_Balance__c</fullName>
        <description>This field represents the current principal balance for the loan.</description>
        <label>Principal Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Principal_and_Interest__c</fullName>
        <description>--DEPRECATED--The system auto-populates this currency field to display the total principal and insurance rate per month for the borrower. By default, this field is based on a calculated value. Replaced by Monthly_Payment__c</description>
        <inlineHelpText>This field displays the monthly principal and insurance value.</inlineHelpText>
        <label>-D Principal and Interest</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_Name__c</fullName>
        <description>This field indicates the name of the product in the pricing scenario</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user populates this optional lookup field to reference a Product record. By default, this field is blank.</description>
        <inlineHelpText>This field displays the API name for the Product record referenced.</inlineHelpText>
        <label>Product</label>
        <referenceTo>LLC_BI__Product__c</referenceTo>
        <relationshipLabel>Pricing Options</relationshipLabel>
        <relationshipName>Pricing_Options</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Proposed_Secured_Amount__c</fullName>
        <description>Users populate this field to designate the amount of a loan backed by collateral. By default, it is blank.</description>
        <inlineHelpText>Populate this field with the amount of a loan backed by collateral.</inlineHelpText>
        <label>Proposed Secured Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Qualifying_Payment__c</fullName>
        <description>The system automatically populates this optional amount field to specify the payment used to calculate the proposed monthly debt.</description>
        <inlineHelpText>This system-populated field displays the monthly payment used to calculate the proposed monthly debt.</inlineHelpText>
        <label>Qualifying Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Qualifying_Rate__c</fullName>
        <description>The system automatically populates this optional percentage field to specify the interest rate used to calculate the proposed monthly debt.</description>
        <inlineHelpText>This system-populated field displays the interest rate used to calculate proposed monthly debt.</inlineHelpText>
        <label>Qualifying Rate</label>
        <precision>12</precision>
        <scale>8</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Qualifying_Term__c</fullName>
        <description>The system automatically populates this optional field to specify the term used to calculate the proposed monthly debt.</description>
        <inlineHelpText>This system-populated field displays the term used to calculate the proposed monthly debt.</inlineHelpText>
        <label>Qualifying Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__ROA__c</fullName>
        <description>The system populates the scenario financial statement ROA. By default, it is blank.</description>
        <label>ROA</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__ROE__c</fullName>
        <description>The system populates the scenario financial statement ROE. By default, it is blank.</description>
        <label>ROE</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Rate_Adjustment__c</fullName>
        <description>Users populate this required field with the value to which they want to adjust the rate by. By default, it is blank.</description>
        <inlineHelpText>Enter a number within the threshold to adjust the rate.</inlineHelpText>
        <label>Rate Adjustment</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Rate_Ceiling__c</fullName>
        <description>The system automatically populates this optional percentage field with information from the Pricing Matrix to specify the maximum threshold of a loan&apos;s interest rate for a set period of time.</description>
        <inlineHelpText>This system-populated field displays the maximum possible percentage of a loan&apos;s interest rate for a set period of time.</inlineHelpText>
        <label>Rate Ceiling</label>
        <precision>11</precision>
        <scale>8</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Rate_Floor__c</fullName>
        <description>The system automatically populates this optional percentage field to specify the minimum threshold of a loan&apos;s interest rate for a set period of time.</description>
        <inlineHelpText>This system-populated field displays the minimum possible percentage of a loan&apos;s interest rate for a set period of time.</inlineHelpText>
        <label>Rate Floor</label>
        <precision>11</precision>
        <scale>8</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Rate_Type__c</fullName>
        <description>This field indicates the Rate Type (Fixed, Floating or Adjustable)</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Rate Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Rate__c</fullName>
        <description>This percent field auto-populates after pricing option calculations. It indicates the interest rate for this pricing option.</description>
        <label>Rate</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Repricing_Duration__c</fullName>
        <description>This field indicates the Repricing duration based on loan type. Floating (Adjustment Frequency), Fixed (Maturity), Adjustable (Fixed Period).</description>
        <label>Repricing Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Risk_Grade__c</fullName>
        <description>This field indicates the risk grade associated with the pricing option. By default, it is blank.</description>
        <label>Risk Grade</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Risk_Rating__c</fullName>
        <description>This field indicates the risk rating associated with the borrower</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Risk Rating</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Scenario_Description__c</fullName>
        <description>The system populates this field with the scenario description. By default, it is blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Scenario Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Scenario_Name__c</fullName>
        <description>The system populates this field with the scenario name. By default, it is blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Scenario Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Scenario_Type__c</fullName>
        <description>The system populates this field with the scenario type. By default, it is blank.</description>
        <label>Scenario Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alternative</fullName>
                </value>
                <value>
                    <fullName>Competitive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Scenario_Weight__c</fullName>
        <description>The system populates this field with the scenario weight. By default, it is blank.</description>
        <label>Scenario Weight</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Selected_Date__c</fullName>
        <description>This field is automatically populated with the date and time that a Pricing Option record was selected and applied to a loan.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Selected Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Short_Code__c</fullName>
        <description>The system populates the Short Code when the system prices a loan. The code serves as the roundtrip Id throughout the loan&apos;s lifecycle. By default, it is blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Short Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Spread__c</fullName>
        <description>This field indicates the Spread related to the Index for pricing Floating and Adjustable loans.</description>
        <label>Spread</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Target_Net_Income__c</fullName>
        <description>The system populates the scenario financial statement Target Net Income. By default, it is blank.</description>
        <label>Target Net Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Target_ROA__c</fullName>
        <description>The system populates the scenario financial statement Target ROA. By default, it is blank.</description>
        <label>Target ROA</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Target_ROE__c</fullName>
        <description>The system populates the scenario financial statement Target ROE. By default, it is blank.</description>
        <label>Target ROE</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Tax_Exempt_Status__c</fullName>
        <description>This field indicates the Tax Exempt status of the loan</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Tax Exempt Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Taxes__c</fullName>
        <description>This field indicates the taxes associated with the pricing option. By default, it is blank.</description>
        <label>Taxes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Teaser_Rate__c</fullName>
        <description>The system automatically populates this optional field using values from the Pricing Matrix with the interest rate initially applied to the loan. The rate is in effect for a given number of payments.</description>
        <inlineHelpText>This system-populated field displays the interest rate initially applied to the loan.</inlineHelpText>
        <label>Teaser Rate</label>
        <precision>11</precision>
        <scale>8</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Teaser_Term__c</fullName>
        <description>The system automatically populates this optional field using values from the Pricing Matrix to indicate the number of payments the teaser rate is in effect.</description>
        <inlineHelpText>This system-populated field displays the number of payments the teaser rate is in effect.</inlineHelpText>
        <label>Teaser Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Term__c</fullName>
        <description>This number field auto-populates after pricing option calculations. It indicates the duration of term of the product for this pricing option.</description>
        <label>Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Cost__c</fullName>
        <description>This currency field auto-populates after pricing option calculations. It indicates the total cost over the life of the product for this pricing option.</description>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Interest_Percentage__c</fullName>
        <description>The system automatically populates this optional percentage field to indicate the total interest the borrower pays over the loan term. The system calculates total interest as a percentage of the loan amount. By default, this field is blank.</description>
        <inlineHelpText>This field indicates the total interest the borrower pays over the loan term as a percentage of the loan amount.</inlineHelpText>
        <label>Total Interest Percentage</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Interest__c</fullName>
        <description>The system automatically populates this field to display the interest paid by a borrower over the life of a loan calculated as a percentage of the Amount Financed. By default, this field is blank.</description>
        <inlineHelpText>This field displays the amount of interest paid for a loan.</inlineHelpText>
        <label>Interest Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Payment_Over_5_Years__c</fullName>
        <description>The system automatically populates this optional currency field to indicate the total amount the borrower pays over the first five years of the loan term. This amount includes principal, interest, and loan costs. By default, this field is blank.</description>
        <inlineHelpText>This field indicates the total principal, interest,  and loan costs the borrower pays over the first five years of the loan term.</inlineHelpText>
        <label>Total Payment Over 5 Years</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Points_And_Fees__c</fullName>
        <description>The system automatically populates this field to indicate the total points and fees for an offer. By default, this field is blank.</description>
        <inlineHelpText>This field indicates the total points and fees for an offer.</inlineHelpText>
        <label>Total Points And Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Principal_Over_5_Years__c</fullName>
        <description>The system automatically populates this optional currency field to indicate the total principal the borrower pays over the first five years of the loan term. By default, this field is blank.</description>
        <inlineHelpText>This field indicates the total principal the borrower pays over the first five years of the loan term.</inlineHelpText>
        <label>Total Principal Over 5 Years</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Principal__c</fullName>
        <description>This currency field auto-populates after pricing option calculations. It indicates the total principal amount over the life of the product, including fees.</description>
        <label>Total Principal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_of_Payments__c</fullName>
        <description>The system automatically populates this currency field for loans subject to TRID tolerances to indicate the total amount the borrower pays over the loan term. By default, this field is blank.</description>
        <inlineHelpText>This field indicates the total principal, interest, and loan costs the borrower pays over the loan term.</inlineHelpText>
        <label>Total of Payments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Utilization__c</fullName>
        <description>Users populate this field to manipulate what the expected utilization is for a Line of Credit product. By default, it is blank.</description>
        <inlineHelpText>Populate this field with the percentage of a line of credit that a borrower is expected to draw down.</inlineHelpText>
        <label>Utilization</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>The field is optional. If populated, the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to Salesforce Developers.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Pricing Option</label>
    <listViews>
        <fullName>LLC_BI__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Pricing Options Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pricing Options</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>